--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,8 +37,8 @@
  
     <h3>Ingredients:</h3>
     <ul id="ingredientsList">
-      <li> <%= ingredients.protein.name %>, <%= ingredients.protein.preparation %>,</li>
-      <li> <%= ingredients.salsa.name %></li>
+      <li> <%=ingredients.protein.name %>, <%=ingredients.protein.preparation%></li>
+      <li> <%=ingredients.salsa.name%></li>
       <!-- set the list-style-type of yje unordered list to "none" to remove the bullet points -->
       <ul style="list-style-type: none;">
         <!-- iterate through the toppings object and display each topping as a list item -->
